Feature: Added update user data api Improve: Improved build command for swagger generate config Refactor: Refactored user types Refactor: Maked user patronymic nullable
